fixed submenus to collapse when another is active, updated styles

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -64,28 +64,35 @@ height: 40px;
     background-color: #FFC857;
     width: 100%;
     max-height: 0px;
-    transition: max-height 0.3s ease-in-out;
+    transition: max-height 0.3s ease-in-out, background-color 1s ease;
 }
 .submenu.open {
-    background-color: #FFC857;
-    width: 100%;
+    background-color: #ffd379;
+    width: 94%;
     max-height: 300px;
 }
 .submenu .submenu-link {
     display: inline-block;
-    transform: translateX(-105%);
+    transform: translateX(-500px);
     opacity: 0;
-    transition: transform 0.5s ease, opacity 1s ease;;
+    transition: transform 0.4s ease, opacity 1s ease;;
 }
 .submenu.open .submenu-link {
     transform: translateX(0);
     opacity: 100%;
 }
 .submenu h5{
-    margin: 3px 25px;
+    margin: 3px 3px;
 }
 .submenu-cont {
+    display: flex;
+    justify-content: flex-end;
     width: 100%;
     height: 100%;
     margin: 5px 0;
+}
+.iso-submenu {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    
 }
